allusion to future

--- a/static/ajax-solr/templates/bodybody_help.html
+++ b/static/ajax-solr/templates/bodybody_help.html
@@ -40,6 +40,12 @@
 	This enables one to save queries, resources (publications and observations), tag them, and optionally share them with a group of
 	collaborators.
 </p>
+
+
+<p>
+	Features not in this version but in development are: nicknames, target normalization, author normalization, more data, more scalable continuation of searches between tabs, public libraries, dropbox support, Data Discovery Tool interoperation, object searching, catalog searching. For the meaning of these, read the tour below!
+</p>
+
 <h3>Tour and Tutorial</h3>
 <br/>
 <ol class="normal">
