--- a/static/ajax-solr/templates/bodybody_user.html
+++ b/static/ajax-solr/templates/bodybody_user.html
@@ -68,7 +68,9 @@
 	This enables one to save queries, resources (publications and observations), tag them, and optionally share them with a group of
 	collaborators.
 </p>
-
+<p>
+	We would love feedback. Either click the blue Feedback link on the upper right of this page, or email us at: adsvao.astroexplorer@gmail.com.
+</p>
 </div>
   
 <div style="display: none;" class="userloggedin">
