--- a/static/ajax-solr/templates/bodybody_help.html
+++ b/static/ajax-solr/templates/bodybody_help.html
@@ -7,6 +7,8 @@
 			<li><a href="http://labs.adsabs.harvard.edu/fulltext/">ADS Labs Full Text Search</a></li>
 			<li><a href="http://simbad.u-strasbg.fr/simbad/sim-fbasic">SIMBAD</a></li>
 			<li><a href="https://docs.google.com/present/view?id=dg4d27sr_11388kfvbcf">IVOA Presentation</a></li>
+			<li><a href="{{siteprefix}}/explorer/publications">Publications</a></li>
+			<li><a href="{{siteprefix}}/explorer/observations">Observations</a></li>
 		</ul>
 	</div>
 </div>
