--- a/static/ajax-solr/templates/bodybody_help.html
+++ b/static/ajax-solr/templates/bodybody_help.html
@@ -1,4 +1,4 @@
-<div class="sidebar">
+<div class="fluid-sidebar">
 	<div class="well">
 		<h3>Useful Links</h3><br/>
 		<ul>
@@ -13,7 +13,7 @@
 	</div>
 </div>
 
-<div class="content"> 
+<div class="fluid-content"> 
 
 <h2>Help</h2>
 <hr/>
