--- a/static/ajax-solr/templates/bodybody_saved.html
+++ b/static/ajax-solr/templates/bodybody_saved.html
@@ -1,11 +1,11 @@
-<div class="sidebar">
+<div class="fluid-sidebar">
 	<div class="well">
 		<div id="tagslist">
 		</div>
 	</div>
 </div>
 
-<div class="content"> 
+<div class="fluid-content"> 
 <h3> Saved Searches, Publications, and Observations </h3>
 {{#istag}} <h4>Tag {{ tag }}</h4> {{/istag}}
 <hr/>
