--- a/static/ajax-solr/templates/bodybody_user.html
+++ b/static/ajax-solr/templates/bodybody_user.html
@@ -1,4 +1,4 @@
-<div class="sidebar">
+<div class="fluid-sidebar">
 	<div class="well">
 		<h3>Search</h3><br/>
 		<form id="qsearchform" class="form-stacked" action="">
@@ -31,7 +31,7 @@
 		</ul>
 	</div>
 </div>
-<div class="content">
+<div class="fluid-content">
 <span class="pull-right">
 	<a class="btn small info iframe feedback" href="https://docs.google.com/spreadsheet/embeddedform?formkey=dDVLSk9TcVdtekJKa0RwOGJmV2Z2YkE6MQ">Feedback</a>
 	<a class="btn small success" href="{{ siteprefix }}/explorer/help">Help</a>
