--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -3,7 +3,7 @@
     <meta name="description" content=""> 
     <meta name="author" content=""> 
   <title>{{pagetitle}}</title> 
-    <link rel="stylesheet" type="text/css" href="{{ staticprefix }}/bootstrap/bootstrap.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="{{ staticprefix }}/bootstrap/css/bootstrap.css" media="screen" />
   <link rel="stylesheet" type="text/css" href="{{ staticprefix }}/css/semflow.css" media="screen"/> 
 <script type="text/javascript">
 var dagroup = '{{group}}';
@@ -13,11 +13,11 @@ var datag = '{{ tag }}'
 var mygroups=[];
 </script>
  <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script-->
-<script type="text/javascript" src="{{ staticprefix }}/ext/jquery-1.4.2.min.js"></script>
+<script type="text/javascript" src="{{ staticprefix }}/ext/jquery-1.7.1.min.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/js/underscore-min.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/backbone/backbone.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/bootstrap/js/bootstrap-dropdown.js"></script>
-  <script type="text/javascript" src="{{ staticprefix }}/bootstrap/js/bootstrap-twipsy.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/bootstrap/js/bootstrap-tooltip.js"></script>
 <!--script type="text/javascript" src="js/jquery.ui.ipad.js"></script-->
  <script type="text/javascript" src="{{ staticprefix }}/js/semflow.core2.js"></script> 
  <script type="text/javascript" src="{{ staticprefix }}/ajax-solr/core/Core.js"></script>
