--- a/static/ajax-solr/templates/bodybody_observations.html
+++ b/static/ajax-solr/templates/bodybody_observations.html
@@ -1,115 +1,139 @@
-<div class="sidebar"> 
+<div class="fluid-sidebar"> 
 <div class="well">
-  <h3>Current Selection</h3> 
-  <ul id="selection"></ul> 
 
-  <a id="thrower" class="label success" style="display:none">Continue in Publications</a>
-  <a id="metricsthrower" class="label success" style="display:none">METRICS</a>
-  <span id="numpubs"></span>
-  <h5>Search</h5> 
-  <span id="search_help">(press ESC to close suggestions)</span> 
-  <ul id="search"> 
-    <input type="text" id="query" name="query"/> 
-  </ul>
+  <div>
+    <h3>Current Selection</h3> 
+    <ul id="selection"></ul> 
+
+    <a id="thrower" class="label success" style="display:none">Continue in Publications</a>
+    <a id="metricsthrower" class="label success" style="display:none">METRICS</a>
+    <span id="numpubs"></span>
+    <h5>Search</h5> 
+    <span id="search_help">(press ESC to close suggestions)</span> 
+    <ul id="search"> 
+      <input type="text" id="query" name="query"/> 
+    </ul>
+  </div>
+
+  <div class="clear"></div>
+  <br/>
   <br/>
 
-<h3>Data Facets</h3>
+  <div>
+    <h3>Data Facets</h3>
 
-  
-  <h5>Missions</h5> 
-  <div class="tagcloud" id="missions"></div>
+    <h5>Missions</h5> 
+    <div class="tagcloud" id="missions"></div>
 
-  <h5>Collections</h5> 
-  <div class="tagcloud" id="data_collection"></div>
+    <h5>Collections</h5> 
+    <div class="tagcloud" id="data_collection"></div>
 
-  <h5>Observation Types</h5> 
-  <div class="tagcloud" id="obsvtypes"></div>
-  
-  <h5>Data Product Types</h5> 
-  <div class="tagcloud" id="datatypes"></div>
-  
-  <h5>Wavelengths</h5> 
-  <div class="tagcloud" id="emdomains"></div>
-  
-  <h5>Instruments</h5> 
-  <div class="tagcloud" id="instruments"></div>
-  
-  <h5>Targets</h5> 
-  <div class="tagcloud" id="targets"></div>
-  
-  <h5>RA</h5>
-  <div id="ra"></div>
-  <span id="ra_amount" class="rangevalues"></span>
-  
-  <h5>DEC</h5>
-  <div id="dec"></div>
-  <span id="dec_amount" class="rangevalues"></span>
-  
-  <h5>FOV</h5>
-  <div id="fov"></div>
-  <span id="fov_amount" class="rangevalues"></span>
+    <h5>Observation Types</h5> 
+    <div class="tagcloud" id="obsvtypes"></div>
+    
+    <h5>Data Product Types</h5> 
+    <div class="tagcloud" id="datatypes"></div>
+    
+    <h5>Wavelengths</h5> 
+    <div class="tagcloud" id="emdomains"></div>
+    
+    <h5>Instruments</h5> 
+    <div class="tagcloud" id="instruments"></div>
+    
+    <h5>Targets</h5> 
+    <div class="tagcloud" id="targets"></div>
+    
+    <h5>RA</h5>
+    <div id="ra"></div>
+    <span id="ra_amount" class="rangevalues"></span>
+    
+    <h5>DEC</h5>
+    <div id="dec"></div>
+    <span id="dec_amount" class="rangevalues"></span>
+    
+    <h5>FOV</h5>
+    <div id="fov"></div>
+    <span id="fov_amount" class="rangevalues"></span>
 
-  <h5>Resolution</h5>
-  <div id="resolution"></div>
-  <span id="resolution_amount" class="rangevalues"></span>
+    <h5>Resolution</h5>
+    <div id="resolution"></div>
+    <span id="resolution_amount" class="rangevalues"></span>
 
-  <h5>Time Resolution</h5>
-  <div id="t_resolution"></div>
-  <span id="t_resolution_amount" class="rangevalues"></span>
+    <h5>Time Resolution</h5>
+    <div id="t_resolution"></div>
+    <span id="t_resolution_amount" class="rangevalues"></span>
 
-  <h5>When Observed?</h5>
-  <div id="obsvtime"></div>
-  <span id="obsvtime_amount" class="rangevalues"></span>
-  
-  <h5>Exposure Time (ksec)</h5>
-  <div id="exptime"></div>
-  <span id="exptime_amount" class="rangevalues"></span>
-  
-  <!--h5>Observation Ids</h5> 
-  <div class="tagcloud" id="obsids"></div>
+    <h5>When Observed?</h5>
+    <div id="obsvtime"></div>
+    <span id="obsvtime_amount" class="rangevalues"></span>
+    
+    <h5>Exposure Time (ksec)</h5>
+    <div id="exptime"></div>
+    <span id="exptime_amount" class="rangevalues"></span>
+    
+    <!--h5>Observation Ids</h5> 
+    <div class="tagcloud" id="obsids"></div!-->
+  </div>
 
-  <div class="clear"></div--> 
+  <div class="clear"></div> 
   <br/>
-<br/>
-  <h3>Publication Facets</h3>
-  <h5>Top Keywords</h5> 
-  <div class="tagcloud" id="keywords"></div> 
-
-  <h5>Top Authors</h5> 
-  <div class="tagcloud" id="author"></div>
+  <br/>
 
 
-  <!-- Taken out by Doug
-  <h5>Paper Types</h5> 
-  <div class="tagcloud" id="papertype"></div>
-  -->
+  <div>
+    <h3>Publication Facets</h3>
+    <h5>Top Keywords</h5> 
+    <div class="tagcloud" id="keywords"></div> 
 
-  <h5>Year of Publication</h5>
-  <div id="pubyear"></div>
-  <span id="pubyear_amount" class="rangevalues"></span>
-  
-<div class="clear"></div> 
-<br/>
-<br/>
-<h3> Object Facets </h3>      
-  <h5>Object Types</h5> 
-  <div class="tagcloud" id="objecttypes"></div>
-  
-  <h5>Object Names</h5> 
-  <div class="tagcloud" id="objectnames"></div>
+    <h5>Top Authors</h5> 
+    <div class="tagcloud" id="author"></div>
+
+
+    <!-- Taken out by Doug
+    <h5>Paper Types</h5> 
+    <div class="tagcloud" id="papertype"></div>
+    -->
+
+    <h5>Year of Publication</h5>
+    <div id="pubyear"></div>
+    <span id="pubyear_amount" class="rangevalues"></span>
    
-      <div class="clear"></div> 
-<br/>
-<br/>
-<h3>Proposal Facets</h3>
-  <h5>Proposal Types</h5> 
-  <div class="tagcloud" id="proposaltype"></div>
-  
-  <h5>Proposal PIs</h5> 
-  <div class="tagcloud" id="proposalpi"></div>
-  
-  <h5>Proposal Ids</h5> 
-  <div class="tagcloud" id="propids"></div>
+  </div> 
+
+  <div class="clear"></div> 
+  <br/>
+  <br/>
+
+  <div>
+    <h3> Object Facets </h3>      
+    <h5>Object Types</h5> 
+    <div class="tagcloud" id="objecttypes"></div>
+    
+    <h5>Object Names</h5> 
+    <div class="tagcloud" id="objectnames"></div>
+     
+  </div>
+
+  <div class="clear"></div> 
+  <br/>
+  <br/>
+
+  <div>
+    <h3>Proposal Facets</h3>
+    <h5>Proposal Types</h5> 
+    <div class="tagcloud" id="proposaltype"></div>
+    
+    <h5>Proposal PIs</h5> 
+    <div class="tagcloud" id="proposalpi"></div>
+    
+    <h5>Proposal Ids</h5> 
+    <div class="tagcloud" id="propids"></div>
+  </div>
+
+  <div class="clear"></div> 
+  <br/>
+  <br/>
+
 </div>
 </div>
 {{>bodyright}}
