--- a/static/ajax-solr/templates/bodybody_publications.html
+++ b/static/ajax-solr/templates/bodybody_publications.html
@@ -1,7 +1,7 @@
-<div class="sidebar"> 
+<div class="fluid-sidebar"> 
 <div class="well">
 
-
+  <div>
   <h3>Current Selection</h3> 
   <ul id="selection"></ul>
   <a id="thrower" class="label success" style="display:none">Continue in Observations</a>
@@ -13,8 +13,12 @@
   <ul id="search"> 
     <input type="text" id="query" name="query"/> 
   </ul> 
+  </div>
+  <div class="clear"></div> 
+  <br/>
   <br/>
  
+  <div>
   <h3>Publication Facets</h3>
 
   <h5>Top Keywords</h5> 
@@ -36,24 +40,27 @@
   <h5>Year of Publication</h5>
   <div id="pubyear"></div>
   <span id="pubyear_amount" class="rangevalues"></span>
- 
-    <div class="clear"></div> 
-    <br/>
-    <br/>
+  </div>
+
+  <div class="clear"></div> 
+  <br/>
+  <br/>
     
-<h3> Object Facets </h3>      
+  <div>
+  <h3> Object Facets </h3>      
   <h5>Object Types</h5> 
   <div class="tagcloud" id="objecttypes"></div>
   
   <h5>Object Names</h5> 
   <div class="tagcloud" id="objectnames"></div>
-   
+   </div>
 
-    <div class="clear"></div> 
-    <br/>
-    <br/>
+  <div class="clear"></div> 
+  <br/>
+  <br/>
 
-<h3>Observation Facets</h3>
+  <div>
+  <h3>Observation Facets</h3>
 
   
   <h5>Observation Types</h5> 
@@ -88,13 +95,15 @@
   <span id="exptime_amount" class="rangevalues"></span>
   
   <!--h5>Observation Ids</h5> 
-  <div class="tagcloud" id="obsids"></div>
+  <div class="tagcloud" id="obsids"></div-->
+  </div>
 
-    <div class="clear"></div--> 
-    <br/>
-    <br/>
+  <div class="clear"></div> 
+  <br/>
+  <br/>
 
-<h3>Proposal Facets</h3>
+  <div>
+  <h3>Proposal Facets</h3>
   <h5>Proposal Types</h5> 
   <div class="tagcloud" id="proposaltype"></div>
   
@@ -103,6 +112,11 @@
   
   <h5>Proposal Ids</h5> 
   <div class="tagcloud" id="propids"></div>
+  </div>
+
+  <div class="clear"></div> 
+  <br/>
+  <br/>
   
 </div>
 </div>
