--- a/static/ajax-solr/templates/bodyright.html
+++ b/static/ajax-solr/templates/bodyright.html
@@ -1,4 +1,4 @@
-<div class="content right"> 
+<div class="fluid-content right"> 
   <div id="result"> 
     <div id="navigation"> 
       <ul id="pager"></ul> 
@@ -6,10 +6,10 @@
 	  <div id="other-header">
 		<a class="save" id="save-search" style="display:none" href="#">save search</a>
 		<a class="delete" id="delete-search" style="display:none" href="#">delete search</a>
-		<span class="label notice pull-right">
-			 <span>Sort By:&nbsp;&nbsp;</span>
-		     <select class="small" id="sortselector"></select>
-		     <a class="btn small sorter" id="togglesort" state="desc">&darr;</a>
+		<span class="pull-right form-inline">
+			<label class="label notice">Sort By:&nbsp;&nbsp;</label>
+		    <select class="small" id="sortselector"></select>
+		    <a class="btn small sorter" id="togglesort" state="desc"><i class="icon arrow-down"></i></a>
 		</span>
 	  </div> 
     </div>
