--- a/static/ajax-solr/templates/template.html
+++ b/static/ajax-solr/templates/template.html
@@ -4,7 +4,7 @@
 <body>
 
 		{{>bodyhead}}
-	<div class="container-fluid">
+	<div class="fluid-container sidebar-left">
 		{{>bodybody}}
 	</div>
 </body>
