first attempt at accordians

--- a/static/ajax-solr/templates/bodybody_publications.html
+++ b/static/ajax-solr/templates/bodybody_publications.html
@@ -21,8 +21,8 @@
   <div>
   <h3>Publication Facets</h3>
 
-  <h5>Top Keywords</h5> 
-  <div class="tagcloud" id="keywords"></div> 
+  <h5>Top Keywords&nbsp;<button class="btn btn-tiny" data-toggle="collapse" data-target="#keywords"><i class="icon chevron-right"></i></button></h5>
+  <div class="tagcloud collapse" id="keywords"></div> 
 
 
   <h5>Top Authors</h5> 
