fixed layout for changes from 2.0-wip to master. Why is bootstrap so fragile. Buttons and ocons next

--- a/static/ajax-solr/css/semflow.css
+++ b/static/ajax-solr/css/semflow.css
@@ -349,7 +349,7 @@ ol.normal li{
     color:#404040;
 }
 
-.navbar-fixed .brand {
+.navbar-fixed-top .brand {
   font-weight: bold;
   color: #000;
   text-shadow: 0 1px 0 rgba(255,255,255,.1), 0 0 30px rgba(255,255,255,.125);
@@ -357,6 +357,6 @@ ol.normal li{
      -moz-transition: all .2s linear;
           transition: all .2s linear;
 }
-.navbar-fixed .brand:hover {
+.navbar-fixed-top .brand:hover {
   text-decoration: none;
 }
