--- a/static/ajax-solr/templates/bodybody_observations.html
+++ b/static/ajax-solr/templates/bodybody_observations.html
@@ -1,4 +1,5 @@
-<div class="fluid-sidebar"> 
+<div class="row-fluid"> 
+<div class="span4">
 <div class="well">
 
   <div>
@@ -137,3 +138,5 @@
 </div>
 </div>
 {{>bodyright}}
+</div>
+
