--- a/static/ajax-solr/templates/bodybody_publications.html
+++ b/static/ajax-solr/templates/bodybody_publications.html
@@ -1,4 +1,5 @@
-<div class="fluid-sidebar"> 
+<div class="row-fluid"> 
+<div class="span4"> 
 <div class="well">
 
   <div>
@@ -121,3 +122,4 @@
 </div>
 </div>
 {{>bodyright}}
+</div>
