--- a/static/ajax-solr/templates/bodyhead.html
+++ b/static/ajax-solr/templates/bodyhead.html
@@ -1,6 +1,6 @@
-<div class="navbar navbar-fixed">
+<div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
-        <div class="fluid-container">
+        <div class="container-fluid">
             <a id="brandhref" class="brand" href="#">AstroExplorer&nbsp;<sup>&alpha;:2</sup></a>
             <ul class="nav pull-left"> 
                 <li class="{{ isitchosenpublications }}"><a href="{{ siteprefix }}/explorer/publications">Publications</a></li> 
