--- a/static/ajax-solr/templates/bodyright.html
+++ b/static/ajax-solr/templates/bodyright.html
@@ -1,4 +1,4 @@
-<div class="fluid-content right"> 
+<div class="fluid-content right span8"> 
   <div id="result"> 
     <div id="navigation"> 
       <ul id="pager"></ul> 
