--- a/static/ajax-solr/templates/bodybody_observations.html
+++ b/static/ajax-solr/templates/bodybody_observations.html
@@ -6,8 +6,8 @@
     <h3>Current Selection</h3> 
     <ul id="selection"></ul> 
 
-    <a id="thrower" class="label success" style="display:none">Continue in Publications</a>
-    <a id="metricsthrower" class="label success" style="display:none">METRICS</a>
+    <a id="thrower" class="label label-success" style="display:none">Continue in Publications</a>
+    <a id="metricsthrower" class="label label-success" style="display:none">METRICS</a>
     <span id="numpubs"></span>
     <h5>Search</h5> 
     <span id="search_help">(press ESC to close suggestions)</span> 
