--- a/static/ajax-solr/templates/bodybody_user.html
+++ b/static/ajax-solr/templates/bodybody_user.html
@@ -31,8 +31,8 @@
 
 	<div class="fluid-content span8">
 		<span class="pull-right">
-			<a class="btn small info iframe feedback" href="https://docs.google.com/spreadsheet/embeddedform?formkey=dDVLSk9TcVdtekJKa0RwOGJmV2Z2YkE6MQ">Feedback</a>
-			<a class="btn small success" href="{{ siteprefix }}/explorer/help">Help</a>
+			<a class="btn small btn-info iframe feedback" href="https://docs.google.com/spreadsheet/embeddedform?formkey=dDVLSk9TcVdtekJKa0RwOGJmV2Z2YkE6MQ">Feedback</a>
+			<a class="btn small btn-success" href="{{ siteprefix }}/explorer/help">Help</a>
 		</span>
 		<h2 id="welcome" class="userloggedin"></h2>
 		<h2 class="userloggedout" style="display:none">Welcome, unknown user!</h2>
