--- a/static/ajax-solr/templates/bodybody_publications.html
+++ b/static/ajax-solr/templates/bodybody_publications.html
@@ -5,9 +5,9 @@
   <div>
   <h3>Current Selection</h3> 
   <ul id="selection"></ul>
-  <a id="thrower" class="label success" style="display:none">Continue in Observations</a>
+  <a id="thrower" class="label label-success" style="display:none">Continue in Observations</a>
   <!--div id="metricsthrowerdiv" style="display:none"><iframe id="metricsthroweriframe"></iframe></div-->
-  <a id="metricsthrower" class="label success" style="display:none">METRICS</a>
+  <a id="metricsthrower" class="label label-success" style="display:none">METRICS</a>
   <span id="numpubs"></span>
   <h5>Search</h5> 
   <span id="search_help">(press ESC to close suggestions)</span> 
@@ -22,7 +22,7 @@
   <div>
   <h3>Publication Facets</h3>
 
-  <h5>Top Keywords&nbsp;<button class="btn btn-tiny" data-toggle="collapse" data-target="#keywords"><i class="icon chevron-right"></i></button></h5>
+  <h5>Top Keywords&nbsp;<button class="btn small" data-toggle="collapse" data-target="#keywords"><i class="icon-chevron-right"></i></button></h5>
   <div class="tagcloud collapse" id="keywords"></div> 
 
 
