--- a/static/ajax-solr/templates/bodyright.html
+++ b/static/ajax-solr/templates/bodyright.html
@@ -9,7 +9,7 @@
 		<span class="pull-right form-inline">
 			<label class="label notice">Sort By:&nbsp;&nbsp;</label>
 		    <select class="small" id="sortselector"></select>
-		    <a class="btn small sorter" id="togglesort" state="desc"><i class="icon arrow-down"></i></a>
+		    <a class="btn small sorter" id="togglesort" state="desc"><i class="icon-arrow-down"></i></a>
 		</span>
 	  </div> 
     </div>
