--- a/static/ajax-solr/templates/bodybody_publications.html
+++ b/static/ajax-solr/templates/bodybody_publications.html
@@ -22,7 +22,7 @@
   <div>
   <h3>Publication Facets</h3>
 
-  <h5>Top Keywords&nbsp;<button class="btn small" data-toggle="collapse" data-target="#keywords"><i class="icon-chevron-right"></i></button></h5>
+  <h5>Top Keywords&nbsp;<button class="btn btn-mini btn-info" data-toggle="button collapse" data-target="#keywords"><span class="caret"></span></button></h5>
   <div class="tagcloud collapse" id="keywords"></div> 
 
 
