--- a/static/ajax-solr/templates/pagehead.html
+++ b/static/ajax-solr/templates/pagehead.html
@@ -13,7 +13,11 @@ var datag = '{{ tag }}'
 var mygroups=[];
 </script>
  <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script-->
-<script type="text/javascript" src="{{ staticprefix }}/ext/jquery-1.7.1.min.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/ext/jquery-1.7.1.min.js"></script>
+  <script type="text/javascript" src="{{ staticprefix }}/ext/jquery-ui-1.8.1.custom.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="{{ staticprefix }}/ext/smoothness/jquery-ui.css" media="screen" />
+  <!-- this must be here so that bootstrap widgets can override-->
+  <script type="text/javascript" src="{{ staticprefix }}/bootstrap/js/bootstrap-dropdown.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/js/underscore-min.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/backbone/backbone.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/bootstrap/js/bootstrap-dropdown.js"></script>
@@ -41,8 +45,7 @@ var mygroups=[];
   <script type="text/javascript" src="{{ staticprefix }}/widgets-coffee/CurrentSearchWidget.js"></script>
 
   <!--script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"></script-->
-<script type="text/javascript" src="{{ staticprefix }}/ext/jquery-ui-1.8.1.custom.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="{{ staticprefix }}/ext/smoothness/jquery-ui.css" media="screen" />
+
   <link rel="stylesheet" type="text/css" href="{{ staticprefix }}/ext/jquery.autocomplete.css" media="screen" />
   <script type="text/javascript" src="{{ staticprefix }}/ext/jquery.autocomplete.js"></script>
   <script type="text/javascript" src="{{ staticprefix }}/widgets-coffee/AutocompleteWidget.js"></script>
